syntax = "proto3";
package iot.registration;
import "types.proto";

service RegistrationService {
    rpc Register(RegistrationRequest) returns (RegistrationResponse);
};

message RegistrationRequest {
    string public_key = 1;
    repeated Capability capabilities = 2;
}
message RegistrationResponse {
    string public_key = 1;
    string client_id = 2;
    string certificate = 3;
}

message Capability {
    bool available = 1;
    iot.types.Capabilities capability = 2;
}
